# ssook

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEATURE_AUDIT.md  LICENSE  QC_REPORT.md  README.md  darknet.md  darknet.py  main.py  prd.json  progress.txt  pyproject.toml  render_results_video.py  requirements-vlm.txt  requirements-web.txt  requirements.txt  run.py  run_batch_inference.py  run_web.py  server.py  skills-lock.json  ssook.spec  ssook_mac.spec  stop.bat  stop_ssook.bat  visualizer.spec  visualizer_mac.spec
assets/: icon.icns
core/: app_config.py  benchmark_runner.py  bottleneck_analyzer.py  class_catalog.py  clip_inference.py  diagnosis_charts.py  env.py  ep_manager.py  ep_selector.py  ep_worker.py  evaluation.py  exports.py  hashing.py  hf_downloader.py  inference.py  logging_setup.py  model_cache.py  model_classifier.py  model_diagnosis.py  model_inspector.py  model_loader.py  model_pairing.py  model_profiler.py  optimization_pipeline.py  optimizer_registry.py  paths.py  quantizer.py  run_record.py  tracking.py  vlm_inference.py
docs/: backend-runbook.md  embedding-and-clip.md  evaluation-metrics.md  execution-providers.md  future-works.md  general-features.md  index.md  model-analysis.md  model-optimization.md  phase1-models.md  quantization-guide.md  tracking-and-sampling.md
scripts/: setup_ep.bat  setup_ep.sh
server/: __init__.py  analysis_routes.py  benchmark_routes.py  config_routes.py  data_routes.py  errors.py  eval_routes.py  extra_routes.py  middleware.py  model_manager.py  model_routes.py  optimization_routes.py  path_safety.py  (+5 more)
(+106 files in other folders)
